@@ -493,9 +493,8 @@ Sample KrigingResult::getConditionalMarginalVariance(const Sample & xi,
     LOGINFO("Compute interactions Sigma_xx");
     // Only diagonal of the discretization Matrix
     // First set sigmaXX
-    const Point tau(inputDimension);
-    // There is no computeAsScalar(tau) method
-    const Point sigma2(1, covarianceModel_.computeAsScalar(tau));
+    const Point defaultPoint(inputDimension);
+    const Point sigma2(1, covarianceModel_.computeAsScalar(defaultPoint,defaultPoint));
     Sample result(sampleSize, sigma2);
 
 
