@@ -1,6 +1,10 @@
 %feature("docstring") OT::LatentVariableModel
 "Latent variable covariance function.
 
+.. warning::
+    This class is experimental and likely to be modified in future releases.
+    To use it, import the ``openturns.experimental`` submodule.
+
 Available constructors:
     LatentVariableModel(*nLevels=2*)
 
@@ -49,8 +53,8 @@ Examples
 Create a latent model covariance function with a latent space of dimension 2, for a discrete variable 
 characterized by 3 levels:
 
->>> import openturns as ot
->>> covModel = ot.LatentVariableModel(3, 2)
+>>> import openturns.experimental as otexp
+>>> covModel = otexp.LatentVariableModel(3, 2)
 >>> activeCoordinates = [0.1, 0.3, -0.4]
 >>> covModel.setLatentVariables(activeCoordinates)
 >>> print(covModel(1, 2))
